--- a/sunshinewatch/src/main/res/values/dimens.xml
+++ b/sunshinewatch/src/main/res/values/dimens.xml
@@ -1,22 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="digital_text_size">35dp</dimen>
-    <dimen name="digital_text_size_round">35dp</dimen>
+    <dimen name="digital_text_size">30dp</dimen>
+    <dimen name="digital_text_size_round">30dp</dimen>
     <dimen name="digital_date_text_size">18dp</dimen>
-    <dimen name="digital_date_text_size_round">20dp</dimen>
-    <dimen name="digital_temp_text_size">25dp</dimen>
-    <dimen name="digital_temp_text_size_round">25dp</dimen>
+    <dimen name="digital_date_text_size_round">16dp</dimen>
+    <dimen name="digital_temp_text_size">20dp</dimen>
+    <dimen name="digital_temp_text_size_round">22dp</dimen>
 
     <dimen name="digital_am_pm_size">25dp</dimen>
     <dimen name="digital_am_pm_size_round">30dp</dimen>
-    <dimen name="digital_x_offset">25dp</dimen>
-    <dimen name="digital_x_offset_round">60dp</dimen>
+    <dimen name="digital_x_offset">50dp</dimen>
+    <dimen name="digital_x_offset_round">65dp</dimen>
 
-    <dimen name="digital_x2_offset">25dp</dimen>
-    <dimen name="digital_x2_offset_round">30dp</dimen>
-    <dimen name="digital_x3_offset">45dp</dimen>
-    <dimen name="digital_x3_offset_round">70dp</dimen>
-    <dimen name="digital_y_offset">65dp</dimen>
+    <dimen name="digital_x2_offset">22dp</dimen>
+    <dimen name="digital_x2_offset_round">37dp</dimen>
+    <dimen name="digital_x3_offset">60dp</dimen>
+    <dimen name="digital_x3_offset_round">78dp</dimen>
+    <dimen name="digital_from_icon_offset">55dp</dimen>
+    <dimen name="digital_from_icon_offset_round">55dp</dimen>
+    <dimen name="digital_y_offset">60dp</dimen>
+    <dimen name="digital_y2_offset">20dp</dimen>
     <dimen name="digital_line_height">25dp</dimen>
     <dimen name="digital_config_color_picker_item_margin">32dp</dimen>
 </resources>
