--- a/sunshinewatch/src/main/res/layout/list_item.xml
+++ b/sunshinewatch/src/main/res/layout/list_item.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:layout_gravity="center_vertical"
 
-    android:background="@color/primary">
+    android:background="#FF1111">
 
     <TextView
         android:id = "@+id/dayOfWeek"
